[package]
name = "las-kml-to-stl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.27.0"
thiserror = "1.0.51"
csv = "1.3.0"
image = "0.24.7"
num = "0.4.1"
serde = {version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = [] }
glob = { version = "0.3.1", features = [] }
stl_io = "0.7.0"
las = { version = "0.8.1", features = ["laz"] }
log = "0.4.20"

